# touchless

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: calc_angle.py  demo.py  dynamic_click_research.py  multiple_hands.py  select_shape.py  select_shape_map_pointer.py  triangle_0_5_17_area.py  turn_on_off_and_blur.py
touchless/: camera.py  hands.py
touchless/gestures/: __init__.py  clicks.py  fingers.py  geometry.py  hand.py  pinches.py
touchless/utils/: events.py  landmarks.py  math_utils.py  shapes.py
