[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "setuptools_scm[toml]>=7"]

[project]
name = "touchless"
version = "0.0.1"
description = "A Python library for building spatial interfaces using gestures, eye tracking, and voice commands."
authors = [
    {name = "Mikhail Rozhkov", email = "mnrozhkov@gmail.com"},
    {name = "Alex Kolosov", email = "alexckolosov@gmail.com"}
]
license = { text = "Apache License 2.0" }
readme = "README.md"
keywords = ["touchless", "spatial-ui", "gesture-control", "eye-tracking", "voice-commands"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "absl-py==2.1.0",
    "attrs==23.2.0",
    "matplotlib==3.8.2",
    "mediapipe==0.10.10",
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "opencv-contrib-python==4.9.0.80",
    "packaging==23.2",
    "Pillow==10.2.0",
    "pydantic==2.6.3",
    "pyparsing==3.1.2",
    "python-dateutil==2.8.2",
]

[project.optional-dependencies]
lint = [
    "mypy==1.8.0",
    "pandas-stubs",
    "types-colorama",
    "types-psutil",
    "types-pyinstaller",
    "types-requests",
    "types-tabulate",
    "types-toml",
    "types-tqdm",
    "typing-extensions",
]
tests = [
    "pytest>=8,<9",
    "pytest-cov>=4.1.0",
    "pytest-test-utils",
]

[project.urls]
Homepage = "https://github.com/mlrepa/touchless"
Repository = "https://github.com/mlrepa/touchless"
Documentation = "http://example.com/docs"

[tool.setuptools]
license-files = ["LICENSE"]